--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html{
 	height: 100%;
-	background-image: linear-gradient(#ff6161,#ff768c);
+	background-image: linear-gradient(#fff4e3,#ffcdab);
 	background-repeat: no-repeat;
 	font-family: sans-serif;
 	color: #0f222d;
@@ -16,7 +16,7 @@ html{
   }
   h1{
 	text-align: center;
-	color: #fff;
+	color: #5d5d5a;
   }
   form{
 	background-color: #fff;
@@ -33,7 +33,7 @@ html{
   }
   button{
 	font-size: 1.5em;
-	color: #53BDFF;
+	color: #ffa45c;
 	background-color: #fff;
 	outline: 0;
 	border: none;
@@ -53,7 +53,7 @@ html{
 	list-style: none;
   }
   li{
-	border-bottom: 1px solid #53BDFF;
+	border-bottom: 1px solid #ffa45c;
 	padding-bottom: 15px;
 	padding-top: 15px;
 	font-size: 1.3em;
@@ -62,12 +62,12 @@ html{
   a{
 	float: right;
 	text-align: right;
-	color: #ff6161;
+	color: #ffa45c;
 	font-size: 1.2em;
 	cursor: pointer;
   }
   .delete{
-	background-color: #ff6161;
+	background-color: #ffa45c;
 	padding: 0px 3px 0px 3px;
 	color: #fff;
 	cursor: pointer;
